CNCF/OPA/container-image-filter.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8srestrictimage
spec:
  crd:
    spec:
      names:
        kind: k8srestrictimage
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8srestrictimage

        violation[{"msg": msg}] {
          namespace := input.review.object.metadata.namespace
          namespace == "restricted-ns"

          image := input.review.object.spec.containers[_].image
          not startswith(image, "myregistry.com/")

          msg := "Only images from myregistry.com are allowed in restricted-ns."
        }
